After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751716 - dashdemux: %u is not correctly parsed for segment templates
dashdemux: %u is not correctly parsed for segment templates
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-06-30 12:20 UTC by Florin Apostol
Modified: 2015-08-16 13:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (936 bytes, patch)
2015-06-30 12:21 UTC, Florin Apostol
committed Details | Review

Description Florin Apostol 2015-06-30 12:20:23 UTC
promote_format_to_uint64 function:

  /* After any 0 and alphanumeric values, there must be
   * an d, x or u. Otherwise validation would have failed
   */
  g_assert (p[0] == 'd' || p[0] == 'x' || p[0] != 'u');

should be:
  g_assert (p[0] == 'd' || p[0] == 'x' || p[0] == 'u');
Comment 1 Florin Apostol 2015-06-30 12:21:15 UTC
Created attachment 306395 [details] [review]
proposed patch
Comment 2 Sebastian Dröge (slomo) 2015-06-30 13:24:46 UTC
commit 0f37768626a5fa4bec4ee3aaf7a295dfc0a2fde0
Author: Florin Apostol <florin.apostol@oregan.net>
Date:   Tue Jun 30 13:20:43 2015 +0100

    dashdemux: corrected parsing of %u in segment templates
    
    https://bugzilla.gnome.org/show_bug.cgi?id=751716