dashdemux: corrected parsing of %u in segment templates

https://bugzilla.gnome.org/show_bug.cgi?id=751716